fleshing out blog post

--- a/blog_outline.ipynb
+++ b/blog_outline.ipynb
@@ -4,6 +4,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Predicting Graffiti Rates in San Diego \n",
+    "\n",
+    "#### K. Schlesinger,  Partnering with the City of San Diego Performance & Analytics Department"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Whether large or small, graffiti has a significant effect on neighborhood quality. At the most basic level, graffiti is quite expensive to repair, costing San Diego upwards of $5 million dollars in a given year<sup>[1](#fn1)</sup>. It also has a detrimental effect on property values and can potentially increase crime rates. According to the Broken Windows theory<sup>[2](#fn2)</sup>, small crimes, such as vandalism, leads to residents disengaging from their neighborhoods. Over time, this community withdrawal makes the area more susceptible to serious crimes.  \n",
+    "\n",
+    "San Diego is committed to decreasing graffiti. In June, they announced a new <a href=\"https://www.sandiego.gov/get-it-done\">\"Get It Done\"</a> reporting system, where citizens can submit reports on a wide range of problems, like graffiti, tree hazards, and potholes. With this system, city government would like to learn more about the range of problems in different municipal areas and improve their response time. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unfortunately, not every area is using the 311 system equally. The bulk of the ~20,000 reports stem from a small number of areas. Below, we have divided the San Diego municipal area into <a href=\"https://en.wikipedia.org/wiki/Census_block_group\">Census block groups</a>. Overlaid is a heatmap showing the frequency of 311 reports in each area. \n",
+    "\n",
+    "<img src=\"output_figures/report_distribution.png\">\n",
+    "\n",
+    "As you can see, most of the reports are clustered around the Balboa park area downtown. There are 864 blockgroups in the San Diego municipal area. 264 of these have filed less than 10 reports since the \"Get It Done\" app has gone lived. These areas account for 16% of the land area and 26% of the population of San Diego. Most importantly, we don't know if we're not getting reports from these areas because they don't have problems or they're simply just not using 311. The city could be unaware of serious problems in these areas, resulting in them underserving a large portion of their citizens. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fortunately, we can use the information from blockgroups that **_are_** reporting to understand the needs of those that **_aren't_**. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To constrain the graffiti patterns in reporting neighborhoods, I combined information from a wide range of data sources, including: \n",
+    "- Demographics from the <a href=\"https://factfinder.census.gov/faces/nav/jsf/pages/programs.xhtml?program=acs\">American Community Survey</a>. Among other information, I looked at: \n",
+    "    - Age\n",
+    "    - Race and Ethnicity\n",
+    "    - Household Income\n",
+    "    - English Fluency \n",
+    "    - Property Values \n",
+    "    - Typical rent costs\n",
+    "- <a href=\"http://data.sandiego.gov/dataset/get-it-done-requests-311\">311 Get It Done Requests</a>, of which ~3000 are graffiti-related\n",
+    "- <a href=\"http://data.sandiego.gov/dataset/code-enforcement-violations\">Code Enforcement Violations</a>, including abandoned buildings\n",
+    "- <a href=\"http://www.sandag.org/index.asp?classid=14&subclassid=21&projectid=446&fuseaction=projects.detail\">Public Crime Data</a>\n",
+    "- <a href=\"http://www.sandag.org/index.asp?fuseaction=home.home\">San Diego Infrastructure Information</a> such as: \n",
+    "    - City Street Lights\n",
+    "    - Publicly maintained Trees\n",
+    "    - Police beats\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I could then map out San Diego in a range of categories, looking for any possible patterns in reported graffiti. \n",
+    "\n",
+    "### Interactive javascript code here?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As I explored the data, a few clear patterns arose. Graffiti tended to cluster in lower income areas. \n",
+    "\n",
+    "### OTHER CORRELATIONS BUT DON'T MAKE THIS OFFENSIVE. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After looking at the various correlations between my graffiti rate and other neighborhood characteristics, I combined a series of features together in a <a href=\"http://scikit-learn.org/stable/modules/linear_model.html#ordinary-least-squares\">Linear Regression Model</a>. As this model can be severely affected by collinearity, I had to be very careful with the input features. In its favor, this model is clearly interpretable, as you can examine the effect each feature has on the overall graffiti rate. This is particularly valuable in this context, as it can help San Diego better understand their graffiti problem. \n",
+    "\n",
+    "## MORE DETAILS ABOUT MODEL CHOICE HERE. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To train my model, I need to extract a sample of blockgroups that have a range of graffiti rates. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a name=\"fn1\">1</a>: <a href=\"http://www.sandag.org/uploads/publicationid/publicationid_1667_14466.pdf\">Graffiti Tracker: An Evaluation of the San Diego County Multi-Discipline Graffiti Abatement program</a> \n",
+    "\n",
+    "<a name=\"fn2\">2</a>: <a href=\"https://en.wikipedia.org/wiki/Broken_windows_theory\">Broken Windows Theory</a> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### The Problem: \n",
     "\n",
     "- San Diego wants more efficiently and effectively respond to citizen complaints about neighborhood graffiti filed with their 311 system. \n",
