more writing up

--- a/blog_outline.ipynb
+++ b/blog_outline.ipynb
@@ -85,14 +85,56 @@
    "source": [
     "After looking at the various correlations between my graffiti rate and other neighborhood characteristics, I combined a series of features together in a <a href=\"http://scikit-learn.org/stable/modules/linear_model.html#ordinary-least-squares\">Linear Regression Model</a>. As this model can be severely affected by collinearity, I had to be very careful with the input features. In its favor, this model is clearly interpretable, as you can examine the effect each feature has on the overall graffiti rate. This is particularly valuable in this context, as it can help San Diego better understand their graffiti problem. \n",
     "\n",
-    "## MORE DETAILS ABOUT MODEL CHOICE HERE. "
+    "## MORE DETAILS ABOUT MODEL CHOICE HERE. \n",
+    "- want rate, not classification \n",
+    "- relatively sparse data set (~850 block groups)\n",
+    "- Not concerned about overfitting"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To train my model, I need to extract a sample of blockgroups that have a range of graffiti rates. "
+    "To train my model, I need to extract a sample of blockgroups that have a range of graffiti rates. I also want blockgroups where I'm confident that the reported graffiti rate accurately reflects the community needs, namely, they need to be reporting. \n",
+    "\n",
+    "I extract a sample of blockgroups with a minimum of 22 reports, the mean value over San Diego. As there are many more blockgroups with low graffiti reporting rates, I isolate regions where the graffiti reporting rate is high, more than 40%. I then extract an equal number of blockgroups where the reporting rate is low, such that I have a well-balanced training set. \n",
+    "\n",
+    "Using careful feature selection and engineering, I create a linear regression model based on this training set. To validate it, I apply model to all remaining blockgroups with a statistically significant number of reports (>22). When I compare my predicted graffiti rates to the reported rates for blockgroups in my test set, I find that a <a href=\"https://en.wikipedia.org/wiki/Residual_sum_of_squares\">residual sum of squares</a> of 0.05, suggesting that my model is quite a good fit to the data. When I examine the distribution of the difference between my predicted and reported graffiti rates, there is a standard deviation of 17%. Although this is a relatively large percentage, my model clearly distinguishes between high and low graffiti areas. \n",
+    "\n",
+    "\n",
+    "### concern that i'm going to do well in the high graffiti areas because they're all in my test set....\n",
+    "\n",
+    "### also my model systematically overpredicts the graffiti rates by around 13%"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Do I want to show a model where I've just filled in the areas that aren't reporting? Or fully my predicted values?\n",
+    "\n",
+    "Using my machine-learning model, I can predict the graffiti rates for all the areas in San Diego that are not making use of the 311 system. This information allows the San Diego government to both a) better market the \"Get It Done\" system to underreporting areas and b) anticipate their need to ensure a better response time. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Improving response time is critical, as much of the graffiti in San Diego is tagging, where individuals are looking for publicity<sup>[1](#fn1)</sup>. A quick clean up discourages tagging, as it limits the graffiti's exposure time.\n",
+    "\n",
+    "Currently, the mean response time is 30 days for all blockgroups in San Diego, regardless of their graffiti reporting rate. By identifying high graffiti areas, the City can focus their maintenance efforts on the areas most in need. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "City government has also considered adding additional street lights to graffiti-ridden areas. Using local infrastructure databases, I determined the street light density for each block group. I also calculated the typical distance between a graffiti event and a street light. \n",
+    "\n",
+    "### need to go over the details here\n",
+    "The heaviest graffiti rates are in fairly well-lit areas. This makes sense, as these regions tend to be in densely populated areas. Oftentimes, wealthier areas are more suburban, and have fewer streetlights. Consequently, streetlight density is not strongly correlated with graffiti rate. \n",
+    "\n",
+    "However, looking at the typical distance between a street light and a graffiti event paints a more nuanced picture. In graffiti-rich areas, where 1 in 4 reports are graffiti-related, the median distance from a streetlight is around 100 feet. This distance is comparable in graffiti-poor areas. As a comparison, I randomly place 250 points in each block group and estimate their distance from the nearest streetlight; these random points are on average much farther away, at around 190 feet. Although these points are randomly placed, rather than clustered along a street, we can see that there are likely many areas farther from a street light where people can be tagging, but they aren't. This suggest that street lights alone are not necessarily a strong deterrent, which makes sense if the majority of San Diego graffiti is done for publicity. "
    ]
   },
   {
